--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 theme: jekyll-theme-leap-day
 plugins:
   - jekyll-sitemap
+  - jekyll-relative-links
+
+relative_links:
+  enabled:     true
+  collections: true
